clean up after merge